<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_container"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/amtDBButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/be_vietnam_pro"
        android:padding="7dp"
        android:text="@string/amtDB"
        android:textAllCaps="false"
        android:textColor="@color/white_75"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sfmButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/be_vietnam_pro"
        android:padding="7dp"
        android:text="@string/sfm"
        android:textAllCaps="false"
        android:textColor="@color/white_75"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sfaButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/be_vietnam_pro"
        android:padding="7dp"
        android:text="@string/sfa"
        android:textAllCaps="false"
        android:textColor="@color/white_75"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sfmWButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/be_vietnam_pro"
        android:padding="7dp"
        android:text="@string/search_for_movies_web"
        android:textAllCaps="false"
        android:textColor="@color/white_75"
        android:textSize="30sp" />

</LinearLayout>