<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:background="@drawable/detail_container"
    android:orientation="vertical"
    tools:context=".SearchForMovies">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/search_bar"
        android:hint="@string/enter_movie_name"
        android:textColorHint="@color/whiteHint"
        android:inputType="text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retrieveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/retrieve_movie"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/save_movie_to_database"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterIv"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/round_outline"
            android:clipToOutline="true"
            android:visibility="gone"
            android:scaleType="centerInside"
            android:src="@drawable/sample" />

        <LinearLayout
            android:id="@+id/detailLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Matrix"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Year"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/yearTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1999"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Rated"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/ratedTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="R"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Released"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/releasedTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="31 Mar 1999"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Runtime"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/runtimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="136 min"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Genre"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/genreTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Action, Sci-Fi"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Director"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/directorsTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lana Wachowski, Lilly Wachowski"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Writer"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/writersTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lilly Wachowski, Lana Wachowski"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Actors"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/actorsTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Keanu Reeves, Laurence Fishburne, Carrie-Anne Moss"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Plot"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=": " />

                <TextView
                    android:id="@+id/plotTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="When a beautiful stranger leads computer hacker Neo to a
forbidding underworld, he discovers the shocking truth--the life he
knows is the elaborate deception of an evil cyber-intelligence."
                    android:textAlignment="viewStart"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--    <ImageView-->
    <!--        android:layout_width="300dp"-->
    <!--        android:layout_height="450dp"-->
    <!--        android:adjustViewBounds="true"-->
    <!--        android:background="@drawable/round_outline"-->
    <!--        android:clipToOutline="true"-->
    <!--        android:scaleType="centerInside"-->
    <!--        android:src="@drawable/sample" />-->


</LinearLayout>